// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server GET / returns the proper HTML when authenticated 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
  <meta charset=\\"UTF-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
  <title>smee.io</title>
  <link rel=\\"shortcut icon\\" href=\\"/public/favicon.png\\">
  <link rel=\\"stylesheet\\" href=\\"/public/main.min.css\\">
</head>
<body>
  <header class=\\"text-white text-center p-responsive bg-blue d-flex flex-column flex-items-center flex-justify-center\\" style=\\"height: 80vh\\">
    <a href=\\"/logout\\" class=\\"btn btn-outline btn-outline-red\\" style=\\"top:0;right:0px;position:fixed;\\">Logout</a>
    <div class=\\"header__anim\\">
      <div class=\\"header__anim__payload\\"></div>
      <div class=\\"header__anim__line\\"></div>
      <div class=\\"header__anim__circle header__anim__center\\"></div>
      <div class=\\"header__anim__circle header__anim__dashed-circle\\"></div>
    </div>
    <h1 class=\\"f00-light\\">smee.io</h1>
    <h2 class=\\"blue-700\\">Webhook payload delivery service</h2>
    <p class=\\"lead text-white\\" style=\\"opacity: 0.8\\">Receives payloads then sends them to your locally running application.</p>
    <a href=\\"/new\\" class=\\"btn btn-outline btn-outline-blue\\">Start a new channel</a>
  </header>

  <main class=\\"container-lg py-6 mt-6 p-responsive\\">
    <p class=\\"lead text-center col-12 col-md-8 mx-auto\\">If your application needs to respond to webhooks, you'll need some way to expose <strong>localhost</strong> to the internet. <strong>smee.io</strong> is a small service that uses <a href=\\"https://developer.mozilla.org/en-US/docs/Web/API/Server-sent_events/Using_server-sent_events\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">Server-Sent Events</a> to proxy payloads from the webhook source, then transmit them to your locally running application.</p>

    <div class=\\"main__anim my-6\\">
      <div class=\\"main__anim__circle main__anim__left\\">
        <span>Webhook Emitter</span>
      </div>
      <div class=\\"main__anim__circle main__anim__right\\">
        <span>localhost</span>
      </div>
      <div class=\\"main__anim__line\\"></div>
      <div class=\\"main__anim__payload\\"></div>
      <div class=\\"main__anim__circle main__anim__center\\">
        <span></span>
      </div>
    </div>

    <p class=\\"lead text-center col-12 col-md-8 mx-auto\\">Tell your webhook source to send payloads to your <strong>smee.io</strong> channel, then either use the <a href=\\"https://github.com/probot/smee/tree/master/client\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">smee client</a> or, if you're using <a href=\\"https://probot.github.io\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">Probot</a> to build a GitHub App, just <a href=\\"https://probot.github.io/docs/development/#configure-a-github-app\\">set the environment variable</a>.</p>
  </main>

  <footer class=\\"border-top text-center py-4\\">
    Made with 🤖 by the <a href=\\"https://github.com/probot\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">Probot team</a>.
  </footer>

  <script async src=\\"https://www.googletagmanager.com/gtag/js?id=UA-102577034-3\\"></script>
  <script>
    window.dataLayer = window.dataLayer || [];
    function gtag(){dataLayer.push(arguments);}
    gtag('js', new Date());
    gtag('config', 'UA-102577034-3');
  </script>
</body>
</html>
"
`;

exports[`server GET /:channel returns the proper HTML when unauthenticated 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
  <meta charset=\\"UTF-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
  <title>Webhooks</title>
  <link rel=\\"shortcut icon\\" href=\\"/public/favicon.png\\">
  <link rel=\\"stylesheet\\" href=\\"/public/main.min.css\\">
</head>
<body>
  <noscript>
    <div class=\\"no-script\\">
      <h1>You must enable JavaScript to use try out todo.</h1>
      <a href=\\"https://github.com/probot/webhooks/issues\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">Need help?</a>
    </div>
  </noscript>
  <div class=\\"mount\\"></div>
  <script src=\\"/public/main.min.js\\"></script>
  <script async src=\\"https://www.googletagmanager.com/gtag/js?id=UA-102577034-3\\"></script>
  <script>
    window.dataLayer = window.dataLayer || [];
    function gtag(){dataLayer.push(arguments);}
    gtag('js', new Date());
    gtag('config', 'UA-102577034-3');
  </script>
</body>
</html>
"
`;

exports[`server GET /:user/:channel  wrong user  1`] = `"{\\"message\\":\\"Sorry you don't have access to this URL\\"}"`;

exports[`server events emits events 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
  <meta charset=\\"UTF-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
  <title>Webhooks</title>
  <link rel=\\"shortcut icon\\" href=\\"/public/favicon.png\\">
  <link rel=\\"stylesheet\\" href=\\"/public/main.min.css\\">
</head>
<body>
  <noscript>
    <div class=\\"no-script\\">
      <h1>You must enable JavaScript to use try out todo.</h1>
      <a href=\\"https://github.com/probot/webhooks/issues\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">Need help?</a>
    </div>
  </noscript>
  <div class=\\"mount\\"></div>
  <script src=\\"/public/main.min.js\\"></script>
  <script async src=\\"https://www.googletagmanager.com/gtag/js?id=UA-102577034-3\\"></script>
  <script>
    window.dataLayer = window.dataLayer || [];
    function gtag(){dataLayer.push(arguments);}
    gtag('js', new Date());
    gtag('config', 'UA-102577034-3');
  </script>
</body>
</html>
"
`;
